force-show titlebar when viewing a playlist on mobile to prevent getting "locked out" when you hit an offline livestream; and added gulp-touch to touch the sass files and set proper date modified timestamps - just was not working before

--- a/src/scss/skin-sm/components/_playlistmenu.scss
+++ b/src/scss/skin-sm/components/_playlistmenu.scss
@@ -216,7 +216,18 @@
 }
 
 // Mobile playlist menu.
-&.#{$prefix}-ui-skin-smallscreen {
+&.#{$prefix}-ui-skin-smallscreen.#{$prefix}-ui-is-playlist {
+  // Make sure the controls are force-shown so that
+  // you can still access the mobile playlist menu
+  // if you hit an offline live stream.
+  &.#{$prefix}-player-state-idle {
+    .#{$prefix}-ui-titlebar {
+      display: block;
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
   .#{$prefix}-ui-playlistmenu-wrapper {
     &.#{$prefix}-hidden {
       display: none;
@@ -299,14 +310,6 @@
 
 		.playlist-thumbnail-wrapper {
 			border: none !important;
-		}
-	}
-
-	.#{$prefix}-ui-is-playlist {
-		.#{$prefix}-ui-controlbar {
-			padding: {
-				bottom: .5em !important;
-			}
 		}
 	}
 }
